@@ -1,0 +1,3 @@
+.strftime { 
+  white-space: nowrap;
+}
